# lolanalyzer

./: README.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  count_tokens.py  create_audio.py  find_champion_games.py  main.py  main_fastapi.py  make_analysis.py  make_json_efficient.py  prompt.py  pyproject.toml  requirements.txt  split_timeline.py  timeline_handler.py
backend/old_files/: get_match_ids.py  get_match_log.py  get_match_timeline.py  match_log.json  match_timeline.json  query_to_mp3.py  structured_query.py
