[project]
name = "lolanalyzer-backend"
version = "0.1.0"
description = "Replay Tool Analyzer - Backend"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.34.0",
    "elevenlabs>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = []

